# Genetic-Project

./: README.md  pyproject.toml
src/Genetic_Project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Optimization/: Grid.py  Optimization.py
